<resources>
    <string name="app_name">FreeBird</string>
    <string name="back">back</string>
    <string name="downloads">Downloads</string>
    <string name="happy_with_service">Happy with service?</string>
    <string name="rate_us_5star_to_appreciate_us">Rate us 5star to appreciate us</string>
    <string name="rate_us_now">Rate Us Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_all">Delete All</string>
    <string name="go_to_files">Go to files</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="_720p">720P</string>
    <string name="_186_48_mb">186.48 Mb</string>
    <string name="completed">Completed</string>
    <string name="_124_28_mb_186_48mb">124.28 Mb/186.48Mb</string>
    <string name="_2_42_mb_s">2.42 Mb/s</string>
    <string name="how_to_watch_movies_for_720p_m4a">How to watch Movies for... 720P.m4a</string>
    <string name="_6_downaloding">6 Downaloding</string>
    <string name="stop_all">Stop All</string>
    <string name="pause">Pause</string>
    <string name="go_to_file">Go to file</string>
    <string name="rate_us">Rate Us</string>
    <string name="we_need_">We need your support. By giving 5 star review the experience of using this app will be more smooth for you</string>
    <string name="later">Later</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="premium_quality_downloads">
        <ol>
            <li>Download <font color='#FF9441'>Unlimited videos</font> from 1000+ Websites.\n</li>
            <li><font color='#FF9441'>All Resolutions supported</font>: 1080P, 2K, 4K, 8K also in Full HD and more.\n</li>
        </ol>
    </string>

    <string name="premium_quality_downloads1">
            <li>Download <font color='#FF9441'>Unlimited videos</font> from 1000+ Websites.</li>
    </string>
    <string name="premium_quality_downloads2">
            <li><font color='#FF9441'>All Resolutions supported</font>: 1080P, 2K, 4K, 8K also in Full HD and more</li>
    </string>

    <string name="no_more_ads1">
        <li>Save your valuable time by removing ads.</li>
    </string>
    <string name="no_more_ads2">
        <li>Enjoy the seamless experience that you deserve.</li>
    </string>
    <string name="best_video_downloader1">
        <li>The best <font color='#FF9441'>Video Downloader</font> app that you will ever find on play store.</li>
    </string>
    <string name="best_video_downloader2">
        <li>You can read our play store reviews.</li>
    </string>

    <array name="topics">
        <item>Downloader</item>
        <item>Video player</item>
    </array>

    <array name="dates">
        <item>Today</item>
        <item>Last 24 hours</item>
        <item>last 7 days</item>
        <item>last 4 weeks</item>
    </array>

    <string name="sign_in_message">Sign In to enter <font color='#FF9441'>Download Hub</font> by syncing all your data.</string>
    <string name="sign_up_message">Sign up to create an account on <font color='#FF9441'>Download Hub</font> to sync your data.</string>

    <string name="https_www_youtube_com_watch">https://www.youtube.com/watch?</string>
    <string name="premium_quality_downloads">Premium Quality Downloads</string>
    <string name="download_unlimited_videos_from_1000_websites">•   Download <font color="#FFBA07">unlimited videos</font> from 1000+ websites.</string>
    <string name="all_res">•    All Resolution supported</string>
    <string name="google_com">Google.com</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="kevin_stuart">Kevin Stuart</string>
    <string name="_19_april_2022">19 April, 2022</string>
    <string name="available_downloads">Available Downloads</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="title_activity_home_menu">HomeMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="manage_account">Manage Account</string>


</resources>