<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.ui.downloads.tabs.CompleteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"

            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="@string/downloads"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"

            android:elevation="0dp"
            app:cardBackgroundColor="@color/primary_yellow"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:strokeColor="@android:color/transparent"
            app:strokeWidth="0dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/delete_all"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:nestedScrollingEnabled="true"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</LinearLayout>