<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:elevation="0dp"
    app:cardElevation="0dp"

    app:cardBackgroundColor="@color/input_text_color"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/crown"
                app:tint="@color/primary_yellow" />

            <TextView
                style="@style/MediumStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/premium_quality_downloads"
                android:textSize="15sp" />


        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            app:dividerColor="@color/white60"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:layout_marginLeft="12dp"
            android:textSize="12sp"
            android:text="@string/download_unlimited_videos_from_1000_websites"
            android:layout_height="wrap_content"

            />

        <TextView
            android:maxLines="1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:ellipsize="marquee"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:text="@string/all_res"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>