<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_bottom_layout"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    tools:context=".presentation.ui.downloads.RateUsBottomSheetFragment"
    tools:ignore="MissingClass">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/emoji" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_us"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/we_need_"
        android:textAlignment="center"
        android:textSize="12sp" />
    <com.willy.ratingbar.ScaleRatingBar
        android:id="@+id/simpleRatingBar"
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srb_numStars="5"
        app:srb_minimumStars="1"
        app:srb_rating="5"
        app:srb_starWidth="30dp"
        app:srb_starHeight="30dp"
        app:srb_starPadding="5dp"
        app:srb_isIndicator="false"
        app:srb_clickable="true"
        app:srb_scrollable="true"
        app:srb_clearRatingEnabled="true"
        app:srb_drawableEmpty="@drawable/uncheck_star"
        app:srb_drawableFilled="@drawable/vector__1_">
    </com.willy.ratingbar.ScaleRatingBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_marginVertical="24dp"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:elevation="0dp"
            app:elevation="0dp"
            android:textColor="@color/primary_yellow"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/later"
            style="@style/MediumStyle"
            android:layout_height="wrap_content"/>

        <include
            layout="@layout/primary_button"
            android:id="@+id/btnRate"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</LinearLayout>