<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.downloads.DownloadsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:toolbarId="@+id/toolbar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleEnabled="false">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="?attr/actionBarSize"
                android:elevation="0dp"
                app:cardBackgroundColor="@color/card_gray"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sf_pro_text_semibold"
                            android:text="@string/happy_with_service"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/rate_us_5star_to_appreciate_us"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />


                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"

                        android:layout_height="42dp"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/sf_pro_text_medium"
                        android:text="@string/rate_us_now"
                        android:textColor="@color/primary_yellow"
                        android:textSize="12sp"
                        app:strokeColor="@color/primary_yellow"
                        app:strokeWidth="1dp">

                    </com.google.android.material.button.MaterialButton>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <include
                android:id="@+id/layoutToolbar"
                layout="@layout/layout_toolbar" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="11dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/card_gray"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            app:strokeColor="@android:color/transparent"
            app:strokeWidth="0dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/card_gray"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:tabBackground="@drawable/tab_bg"
                app:tabIndicatorAnimationMode="fade"
                app:tabIndicatorColor="#12000000"
                app:tabIndicatorFullWidth="true"
                app:tabSelectedTextColor="@color/black"
                app:tabTextAppearance="@style/CustomTabLayoutTextStyle"
                app:tabTextColor="@color/white60">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="In Progress">

                </com.google.android.material.tabs.TabItem>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Completed">

                </com.google.android.material.tabs.TabItem>


            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.card.MaterialCardView>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:text="@string/downloads"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:elevation="0dp"
                app:cardBackgroundColor="@color/primary_yellow"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp"
                app:strokeColor="@android:color/transparent"
                app:strokeWidth="0dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="4dp"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:text="@string/delete_all"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_landing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>